--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,45 @@
 
+@InBook{	  mcconnell-ginet2012gender,
+  address	= {Berlin, Boston},
+  author	= {McConnell-Ginet, Sally},
+  booktitle	= {The Expression of Gender},
+  editor	= {Corbett, Greville G.},
+  pages		= {3-38},
+  publisher	= {De Gruyter},
+  title		= {Gender and its relation to sex: The myth of `natural'
+		  gender},
+  year		= {2012}
+}
+
+@InBook{	  mcconnell-ginet2014gender,
+  address	= {Hoboken, US},
+  author	= {McConnell-Ginet, Sally},
+  booktitle	= {The Handbook of Language, Gender, and Sexuality},
+  editor	= {Ehrlich, Susan and Meyerhoff, Miriam and Holmes, Janet},
+  pages		= {316-334},
+  publisher	= {John Wiley and Sons, Inc},
+  title		= {Meaning-Making and Ideologies of Gender and Sexuality},
+  year		= {2014}
+}
+
+@Article{	  saab2018nominale,
+  author	= {Saab, Andr{\'e}s},
+  pages		= {525--561},
+  title		= {Nominal Ellipsis},
+  year		= {2018}
+}
+
+@InBook{	  lobner2020partee,
+  author	= {L{\"o}bner, Sebastian},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Matthewson, Lisa and Meier, C{\'e}cile and Rullmann, Hotze
+		  and Zimmermann, Thomas Ede},
+  pages		= {1-26},
+  publisher	= {Wiley Blackwell},
+  title		= {The Partee Paradox},
+  year		= {2020}
+}
+
 @InBook{	  chomsky1963finitary,
   address	= {New York},
   author	= {Chomsky, Noam and Miller, George A.},
