--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  unger1975ignorance,
+  author	= {Unger, Peter},
+  pages		= {323},
+  publisher	= {Oxford University Press},
+  title		= {Ignorance},
+  year		= {1975}
+}
+
 @InBook{	  mcconnell-ginet2012gender,
   address	= {Berlin, Boston},
   author	= {McConnell-Ginet, Sally},
@@ -17669,7 +17677,7 @@
 }
 
 @Article{	  thomason1973a-semantic-theory-of,
-  author	= {Thomason,Richmond H. and Stalnaker,Robert C.},
+  author	= {Thomason,Richmond H. and Stalnaker, Robert},
   journal	= {Linguistic Inquiry},
   number	= {2},
   pages		= {195--220},
@@ -17679,7 +17687,7 @@
 }
 
 @Article{	  stalnaker1976possible-worlds,
-  author	= {Stalnaker,Robert C.},
+  author	= {Stalnaker, Robert},
   journal	= {No{\^u}s},
   number	= {1},
   pages		= {65--75},
@@ -17689,7 +17697,7 @@
 }
 
 @Article{	  stalnaker1970pragmatics,
-  author	= {Stalnaker,Robert C.},
+  author	= {Stalnaker, Robert},
   journal	= {Synthese},
   number	= {1/2},
   pages		= {272--289},
@@ -17699,7 +17707,7 @@
 }
 
 @Article{	  stalnaker1981indexical-belief,
-  author	= {Stalnaker,Robert C.},
+  author	= {Stalnaker, Robert},
   journal	= {Synthese},
   number	= {1},
   pages		= {129--151},
@@ -25847,7 +25855,7 @@
 }
 
 @PhDThesis{	  burnett2012the-grammar-of-toler,
-  author	= {Burnett, Heather Susan},
+  author	= {Burnett, Heather},
   type		= {{Ph.D.}},
   title		= {The Grammar of Tolerance On Vagueness,
 		  Context-Sensitivity, and the Origin of Scale Structure},
