--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,22 @@
 
+@Article{	  tellings2020cleft,
+  author	= {Tellings, Jos},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {An analysis of all-clefts},
+  volume	= {5},
+  year		= {2020}
+}
+
+@Article{	  frey2020concessive,
+  author	= {Frey, Werner},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {German concessives as TPs, JPs and ActPs},
+  volume	= {5},
+  year		= {2020}
+}
+
 @Book{		  unger1975ignorance,
   author	= {Unger, Peter},
   pages		= {323},
