--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,109 @@
 
+@InBook{	  kennedy2011adjectives,
+  address	= {New York},
+  author	= {Kennedy, Chris},
+  booktitle	= {The Routledge companion to philosophy of language},
+  editor	= {Graff Fara, Delia and Russell, Gillian},
+  publisher	= {Routledge},
+  title		= {Adjectives},
+  year		= {2011}
+}
+
+@InBook{	  lohnstein2020verbsecond,
+  address	= {Oxford},
+  author	= {Lohnstein, Horst},
+  publisher	= {Oxford University Press},
+  title		= {The grammatical basis of Verb Second: The case of German
+		  Rethinking Verb Second},
+  year		= {2020}
+}
+
+@InBook{	  mccready2010evidentials,
+  author	= {McCready, Eric},
+  booktitle	= {Evidence from evidentials},
+  editor	= {Peterson, Tyler and Sauerland, Uli},
+  pages		= {105-128},
+  publisher	= {University of British Columbia},
+  title		= {Evidential universals},
+  year		= {2010}
+}
+
+@Article{	  rothschild2009indexicals,
+  author	= {Rothschild, Daniel and Segal, Gabriel},
+  journal	= {Mind and Language},
+  number	= {4},
+  pages		= {467--493},
+  title		= {Indexical Predicates},
+  volume	= {24},
+  year		= {2009}
+}
+
+@PhDThesis{	  woods2016speechacts,
+  author	= {Woods, Rebecca},
+  school	= {University of York},
+  title		= {Investigating the syntax of speech acts: embedding
+		  illocutionary force},
+  year		= {2016}
+}
+
+@InBook{	  wiltschko2016confirmationals,
+  address	= {Amsterdam},
+  author	= {Wiltschko, Martina and Heim, Johannes},
+  booktitle	= {Studies in Language Companion Series: Outside the Clause},
+  pages		= {305-340},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {The syntax of confirmationals},
+  year		= {2016}
+}
+
+@Article{	  vicente2015polysemy,
+  author	= {Vicente, Agustin},
+  journal	= {Lingua},
+  pages		= {54--65},
+  title		= {The green leaves and the expert: Polysemy and
+		  truth-conditional variability},
+  volume	= {157},
+  year		= {2015}
+}
+
+@InBook{	  bylinina2015perspective,
+  author	= {Bylinina, L. and Sudo, Yasutada and McCready, Eric},
+  editor	= {Arkadiev, Peter and Kapitonov, Ivan, and Lander, Yuri},
+  publisher	= {LRC Publishing},
+  title		= {Notes on Perspective-Sensitivity},
+  year		= {2015}
+}
+
+@InBook{	  macfarlene2014assertion,
+  address	= {Oxford},
+  author	= {MacFarlane, John},
+  booktitle	= {Assertion. New Philosophical Essays},
+  editor	= {Brown, Jessica and Cappelen, Herman},
+  publisher	= {Oxford Univ Press},
+  title		= {What is an assertion?},
+  year		= {2014}
+}
+
+@Book{		  brown2014assertion,
+  address	= {Oxford},
+  editor	= {Brown, Jessica and Cappelen, Herman},
+  publisher	= {Oxford Univ Press},
+  title		= {Assertion. New Philosophical Essays},
+  year		= {2014}
+}
+
+@InBook{	  krifka2021assertion,
+  address	= {Berlin},
+  author	= {Krifka, Manfred},
+  booktitle	= {Propositionale Argumente im Sprachvergleich: Theorie und
+		  Empirie},
+  editor	= {Hartmann, Jutta and W{\"o}llstein, Angelika},
+  publisher	= {Gunter Narr Verlag},
+  title		= {Layers of Assertive Clauses: Propositions, Judgements,
+		  Commitments, Acts},
+  year		= {2021}
+}
+
 @Article{	  tellings2020cleft,
   author	= {Tellings, Jos},
   journal	= {Glossa: a journal of general linguistics},
