--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,17 @@
+@Article{Jonge1993Pragmatismo,
+author = {de Jonge, Bob}, 
+title = {Pragmatismo y gramaticalización en el cambio lingüístico: ser y estar en expresiones de edad}, 
+journal = {Nueva revista de filología hispánica}, 
+volume = {41}, 
+number = {1}, 
+pages = {99–126}, 
+year = {1993}, 
+abstract = {}, 
+location = {}, 
+keywords = {Copular clauses; Copula; Copulative sentences}}
+
+
+
 @Book{Stassen1997Intransitive,
 author = {Stassen, Leon}, 
 title = {Intransitive predication}, 
