--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,17 @@
+@Article{Leborans1995Estar,
+author = {Fernández Leborans, María José}, 
+title = {Las construcciones con el verbo ESTAR: aspectos sintácticos y semánticos}, 
+journal = {Verba}, 
+volume = {22}, 
+number = {}, 
+pages = {253–284}, 
+year = {1995}, 
+abstract = {}, 
+location = {}, 
+keywords = {predication; copulative; copula; predicative adjectives; copulative sentences}}
+
+
+
 @Article{Jonge1993Pragmatismo,
 author = {de Jonge, Bob}, 
 title = {Pragmatismo y gramaticalización en el cambio lingüístico: ser y estar en expresiones de edad}, 
