--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,32 @@
+@Article{Wilkinson1971Seems,
+author = {Wilkinson, Robert}, 
+title = {It Seems}, 
+journal = {Linguistic Inquiry}, 
+volume = {2}, 
+number = {4}, 
+pages = {558–559}, 
+year = {1971}, 
+abstract = {}, 
+location = {}, 
+keywords = {Predicate; Predication; Copulative; Copula}}
+
+
+
+
+@Article{Wilkinson1976Modes-of-Predication,
+author = {Wilkinson, Robert}, 
+title = {Modes of Predication and Implied Adverbial Complements}, 
+journal = {Foundations of Language}, 
+volume = {14}, 
+number = {2}, 
+pages = {153–194}, 
+year = {1976}, 
+abstract = {Constructions having the surface form NP be ADJ enough to VP are examined. It is shown that when ADJ in this construction belongs to a small class of adjectives including lucky or to a larger class including wise, a structural ambiguity appears in the complement of enough which is related to the distinction between implied and non-implied complements made in Karttunen (1971). The underlying syntactic structure of NP be ADJ enough to VP when ADJ is lucky or wise is examined and the ambiguity in the complement of enough is explained through a generalization of syntactic properties of implied complements. The analysis proposed depends crucially on the use of complex semantic features to relate syntactic structures which are not derivable from one another transformationally. Hence it represents a certain innovation in syntactic theory.}, 
+location = {}, 
+keywords = {Adjective; Degree; Copula}}
+
+
+
 @Article{Leborans1995Estar,
 author = {Fernández Leborans, María José}, 
 title = {Las construcciones con el verbo ESTAR: aspectos sintácticos y semánticos}, 
