--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,17 @@
+@Article{Liao2016Aesthetic,
+author = {Liao, Shen-yi and McNally, Louise and Meskin, Aaron}, 
+title = {Aesthetic adjectives lack uniform behavior}, 
+journal = {Inquiry}, 
+volume = {59}, 
+number = {6}, 
+pages = {618–631}, 
+year = {2016}, 
+abstract = {}, 
+location = {}, 
+keywords = {Copula; Predicate; Adjective; Degree; Beautiful}}
+
+
+
 @Article{Wilkinson1971Seems,
 author = {Wilkinson, Robert}, 
 title = {It Seems}, 
