--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,56 @@
 
+@Article{	  liao2016aesthetic,
+  author	= {Liao, Shen-yi and McNally, Louise and Meskin, Aaron},
+  journal	= {Inquiry},
+  number	= {6},
+  pages		= {618--631},
+  title		= {Aesthetic adjectives lack uniform behavior},
+  volume	= {59},
+  year		= {2016}
+}
+
+@Article{	  wilkinson1971seems,
+  author	= {Wilkinson, Robert},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {558--559},
+  title		= {It Seems},
+  volume	= {2},
+  year		= {1971}
+}
+
+@Article{	  jonge1993pragmatismo,
+  author	= {de Jonge, Bob},
+  journal	= {Nueva revista de filolog{\'i}a hisp{\'a}nica},
+  number	= {1},
+  pages		= {99--126},
+  title		= {Pragmatismo y gramaticalizaci{\'o}n en el cambio
+		  ling{\"u}{\'i}stico: ser y estar en expresiones de edad},
+  volume	= {41},
+  year		= {1993}
+}
+
+@Article{	  leborans1995estar,
+  author	= {Fern{\'a}ndez Leborans, Mar{\'i}a Jos{\'e}},
+  journal	= {Verba},
+  pages		= {253--284},
+  title		= {Las construcciones con el verbo ESTAR: aspectos
+		  sint{\'a}cticos y sem{\'a}nticos},
+  volume	= {22},
+  year		= {1995}
+}
+
+@Article{	  bruderer2015,
+  author	= {Bruderer, AG and Danielson, DK and Kandhadai, P and
+		  Werker, JF},
+  journal	= {Proc Natl Acad Sci USA},
+  number	= {44},
+  pages		= {13531--13536},
+  title		= {Sensorimotor influences on speech perception in infancy.},
+  volume	= {112},
+  year		= {2015}
+}
+
 @InBook{	  kennedy2011adjectives,
   address	= {New York},
   author	= {Kennedy, Chris},
@@ -29635,7 +29687,7 @@
 }
 
 @Article{	  wilkinson1976modes-of-predication,
-  author	= {Wilkinson, Robert W.},
+  author	= {Wilkinson, Robert},
   journal	= {Foundations of Language},
   number	= {2},
   pages		= {153--194},
