--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,137 @@
 
+@InBook{	  vonfintel2006modality,
+  address	= {Detroit, MI},
+  author	= {von Fintel, Kai},
+  booktitle	= {Encyclopedia of Philosophy, vol. 10},
+  editor	= {Borchert, DM},
+  pages		= {20-27},
+  publisher	= {McMillam},
+  title		= {Modality and language},
+  year		= {2006}
+}
+
+@InBook{	  vonfintel2007opinated,
+  author	= {von Fintel, Kai and Gillies, Anthony S.},
+  booktitle	= {Oxford Studies in Epistemology: Volume 2},
+  editor	= {Gendler, Tamar and Hawthorne, John},
+  pages		= {32-62},
+  publisher	= {Oxford University Press},
+  title		= {An Opinionated Guide to Epistemic Modality},
+  year		= {2007}
+}
+
+@Article{	  sanchezlopez2017mira,
+  author	= {S{\'a}nchez L{\'o}pez, Cristina},
+  journal	= {Review of Cognitive Linguistics},
+  number	= {2},
+  pages		= {489--514},
+  title		= {Mirativity in Spanish. The case of particle mira},
+  volume	= {15},
+  year		= {2017}
+}
+
+@Article{	  embick2021roots,
+  author	= {Embick, David},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  title		= {The Motivation for Roots in Distributed Morphology},
+  volume	= {7},
+  year		= {2021}
+}
+
+@Article{	  dalessandro2021,
+  author	= {D'Alessandro, Roberta},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  title		= {Syntactic Change in Contact: Romance},
+  volume	= {7},
+  year		= {2021}
+}
+
+@Article{	  charnavel2021,
+  author	= {Charnavel, Isabelle},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  title		= {Logophoricity, Perspective, and Reflexives},
+  volume	= {7},
+  year		= {2021}
+}
+
+@Article{	  legate2021,
+  author	= {Legate, Julie Anne},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  title		= {Noncanonical Passives: A Typology of Voices in an
+		  Impoverished Universal Grammar},
+  volume	= {7},
+  year		= {2021}
+}
+
+@Article{	  fuchs2021respiratory,
+  author	= {Fuchs, Susanne and Rochet-Capellan, Am{\'e}lie},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  title		= {The Respiratory Foundations of Spoken Language},
+  volume	= {7},
+  year		= {2021}
+}
+
+@Article{	  murray2021,
+  author	= {Murray, Sarah E.},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  title		= {Evidentiality, Modality, and Speech Acts},
+  volume	= {7},
+  year		= {2021}
+}
+
+@Article{	  chomsky2021personal,
+  author	= {Chomsky, Noam},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  title		= {Linguistics Then and Now: Some Personal Reflections},
+  volume	= {7},
+  year		= {2021}
+}
+
+@Article{	  sundaresan2021,
+  author	= {Sundaresan, Sandhya},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  title		= {Shifty Attitudes: Indexical Shift Versus Perspectival
+		  Anaphora},
+  volume	= {7},
+  year		= {2021}
+}
+
+@Article{	  linzen2021,
+  author	= {Linzen, Tal and Baroni, Marco},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  title		= {Syntactic Structure from Deep Learning},
+  volume	= {7},
+  year		= {2021}
+}
+
+@InBook{	  wilkinson1970factive,
+  address	= {Chicago},
+  author	= {Wilkinson, Robert},
+  booktitle	= {Papers from the Sixth Regional Meeting Chicago Linguistic
+		  Society},
+  pages		= {425-446},
+  publisher	= {Chicago Linguistic Society},
+  title		= {Factive Complements and Action Complements},
+  year		= {1970}
+}
+
+@Book{		  linden2012modal,
+  author	= {Linden, An van},
+  pages		= {363},
+  publisher	= {Mouton De Gruyter},
+  title		= {Modal Adjectives},
+  year		= {2012}
+}
+
 @Article{	  liao2016aesthetic,
   author	= {Liao, Shen-yi and McNally, Louise and Meskin, Aaron},
   journal	= {Inquiry},
