--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  kratzer2020information,
+  author	= {Kratzer, Angelika and Selkirk, Elisabeth},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {1--71},
+  title		= {Deconstructing information structure},
+  volume	= {5}
+}
+
 @InBook{	  vonfintel2006modality,
   address	= {Detroit, MI},
   author	= {von Fintel, Kai},
