--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -5,7 +5,8 @@
   number	= {1},
   pages		= {1--71},
   title		= {Deconstructing information structure},
-  volume	= {5}
+  volume	= {5},
+  year		= {2020}
 }
 
 @InBook{	  vonfintel2006modality,
