--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,46 @@
 
+@Article{	  stepanov2016slifting,
+  author	= {Stepanov, Arthur and Stateva, Penka},
+  journal	= {Glossa: a journal of general linguistics},
+  pages		= {30},
+  title		= {Interrogative Slifting: More syntactic, less
+		  parenthetical},
+  volume	= {1},
+  year		= {2016}
+}
+
+@Article{	  haddican2014slifting,
+  author	= {Haddican, Bill and Holmberg, Anders and Tanaka, Hidekazu
+		  and Tsoulas, George},
+  journal	= {Lingua},
+  pages		= {86--106},
+  title		= {Interrogative slifting in English},
+  volume	= {138},
+  year		= {2014}
+}
+
+@InBook{	  ross1973slifting,
+  author	= {Ross, John Robert},
+  booktitle	= {The Formal Analysis of Natural Languages},
+  editor	= {Gross, Maurice and Halle, Morris and Sch{\"u}tzenberger,
+		  Marcel-P.},
+  pages		= {133-170},
+  publisher	= {De Gruyter Mouton},
+  title		= {Slifting},
+  year		= {1973}
+}
+
+@InBook{	  postal1973global,
+  author	= {Postal, Paul},
+  booktitle	= {The Formal Analysis of Natural Languages},
+  editor	= {Gross, Maurice and Halle, Morris and Sch{\"u}tzenberger,
+		  Marcel-P.},
+  pages		= {100-132},
+  publisher	= {De Gruyter Mouton},
+  title		= {A Global Constraint On Pronominalization},
+  year		= {1973}
+}
+
 @Article{	  kratzer2020information,
   author	= {Kratzer, Angelika and Selkirk, Elisabeth},
   journal	= {Glossa: a journal of general linguistics},
