--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  sundaresan2018perspective,
+  author	= {Sundaresan, Sandhya},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Perspective is syntactic: evidence from anaphora},
+  volume	= {3},
+  year		= {2018}
+}
+
 @Article{	  stepanov2016slifting,
   author	= {Stepanov, Arthur and Stateva, Penka},
   journal	= {Glossa: a journal of general linguistics},
