--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,18 @@
 
+@Article{	  landau2020ellipsis,
+  author	= {Landau, Idan},
+  journal	= {Studia Linguistica},
+  title		= {Ellipsis with a Coordinated Antecedent: An Alternative to
+		  V‐stranding VP ‐ellipsis},
+  year		= {2020}
+}
+
+@Unpublished{	  keshet2005taste,
+  author	= {Keshet, Ezra},
+  title		= {A Matter of Taste},
+  year		= {2005}
+}
+
 @Article{	  sundaresan2018perspective,
   author	= {Sundaresan, Sandhya},
   journal	= {Glossa: a journal of general linguistics},
