result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@Article{Lin2010Tenseless,
+author = {Lin, Jo-wang}, 
+title = {A Tenseless Analysis of Mandarin Chinese Revisited: A Response to Sybesma 2007}, 
+journal = {Linguistic Inquiry}, 
+volume = {41}, 
+number = {2}, 
+pages = {305–329}, 
+year = {2010}, 
+location = {}, 
+keywords = {Chinese; Tense; Temporal reference; Copula}}
+
+
+
 @Article{Liao2016Aesthetic,
 author = {Liao, Shen-yi and McNally, Louise and Meskin, Aaron}, 
 title = {Aesthetic adjectives lack uniform behavior}, 
