--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,113 @@
 
+@Article{	  lin2006tense,
+  author	= {Lin, Jo-Wang},
+  journal	= {Journal of Semantics},
+  number	= {1},
+  pages		= {1--53},
+  title		= {Time in a Language Without Tense: The Case of Chinese},
+  volume	= {23},
+  year		= {2006}
+}
+
+@Article{	  lin2010tenseless,
+  author	= {Lin, Jo-wang},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {305--329},
+  title		= {A Tenseless Analysis of Mandarin Chinese Revisited: A
+		  Response to Sybesma 2007},
+  volume	= {41},
+  year		= {2010}
+}
+
+@Article{	  law2017syntactictense,
+  author	= {Law, Paul and Ndayiragije, Juv{\'e}nal},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {679--696},
+  title		= {Syntactic Tense from a Comparative Syntax Perspective},
+  volume	= {48},
+  year		= {2017}
+}
+
+@Article{	  alxatib2017bound,
+  author	= {Alxatib, Sam and Sharvit, Yael},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {697--711},
+  title		= {Bound Tense in Relative Clauses: Evidence from
+		  VP-Ellipsis},
+  volume	= {48},
+  year		= {2017}
+}
+
+@Article{	  alxatib2020only,
+  author	= {Alxatib, Sam},
+  journal	= {Natural Language Semantics},
+  number	= {4},
+  pages		= {395--429},
+  title		= {Only, or, and free choice presuppositions},
+  volume	= {28},
+  year		= {2020}
+}
+
+@PhDThesis{	  crespo2014subjunctive,
+  author	= {Crespo del Rio, Claudia},
+  school	= {University of Illinois at Urbana-Champaign},
+  title		= {Tense and mood variation in Spanish nominal subordinates:
+		  The case of Peruvian varieties},
+  year		= {2014}
+}
+
+@Book{		  alvarez2002gramatica-galego,
+  address	= {Vigo},
+  author	= {Alvarez, Rosario and Xove, Xos{\'e}},
+  pages		= {757},
+  publisher	= {Editorial Galaxia},
+  title		= {Gram{\'a}tica da lingua galega},
+  year		= {2002}
+}
+
+@Book{		  freixeiro2003gramatica-texto,
+  address	= {Vigo},
+  author	= {Freixeiro Mato, Xos{\'e} Ram{\'o}n},
+  publisher	= {Edicions A Nosa Terra},
+  title		= {Gram{\'a}tica da lingua galega: Gram{\'a}tica do texto},
+  volume	= {IV},
+  year		= {2003}
+}
+
+@Book{		  freixeiro2006gramatica-fonetica,
+  address	= {Vigo},
+  author	= {Freixeiro Mato, Xos{\'e} Ram{\'o}n},
+  pages		= {316},
+  publisher	= {Edicions A Nosa Terra},
+  title		= {Gram{\'a}tica da lingua galega: Fon{\'e}tica e
+		  fonolox{\'i}a},
+  volume	= {I},
+  year		= {2006}
+}
+
+@Book{		  freixiero2006gramatica-morfosintaxe,
+  address	= {Vigo},
+  author	= {Freixeiro Mato, Xos{\'e} Ram{\'o}n},
+  pages		= {748},
+  publisher	= {Edicions A Nosa Terra},
+  title		= {Gram{\'a}tica da lingua galega: Morfosintaxe},
+  volume	= {II},
+  year		= {2006}
+}
+
+@Book{		  freixeiro2006gramatica-semantica,
+  address	= {Vigo},
+  author	= {Freixeiro Mato, Xos{\'e} Ram{\'o}n},
+  pages		= {368},
+  publisher	= {Edicions A Nosa Terra},
+  title		= {Gram{\'a}tica da lingua galega: Sem{\'a}ntica},
+  volume	= {III},
+  year		= {2006}
+}
+
 @Article{	  landau2020ellipsis,
   author	= {Landau, Idan},
   journal	= {Studia Linguistica},
@@ -6950,20 +7059,6 @@
   volume	= {48},
   year		= {2017},
   doi		= {10.1162/LING{\_}a{\_}00258}
-}
-
-@Article{	  alxatib2017bound-tense-in-,
-  author	= {Alxatib, Sam and Sharvit, Yael},
-  booktitle	= {Linguistic Inquiry},
-  journal	= {Linguistic Inquiry},
-  number	= {4},
-  pages		= {697--711},
-  publisher	= {MIT Press},
-  title		= {Bound Tense in Relative Clauses: Evidence from
-		  VP-Ellipsis},
-  volume	= {48},
-  year		= {2017},
-  doi		= {10.1162/LING{\_}a{\_}00259}
 }
 
 @Article{	  oxford2017the-activity-co,
