--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,44 @@
+@Book{Arche2019,
+author = {}, 
+title = {The grammar of copulas across languages}, 
+volume = {}, 
+pages = {xvi, 285 pages}, 
+editor = {Arche, María J. and Fábregas, Antonio and Marín, Rafael}, 
+publisher = {Oxford University Press}, 
+address = {Oxford, United Kingdom; New York, NY}, 
+year = {2019}, 
+abstract = {}, 
+keywords = {Copula; Copulative}}
+
+
+
+@Book{PorrocheBallesteros1990,
+author = {Porroche Ballesteros, Margarita}, 
+title = {Aspectos de la atribución en español: las construcciones con un atributo adjetivo que se refiere al sujeto}, 
+volume = {}, 
+pages = {191}, 
+editor = {}, 
+publisher = {Libros Pórtico}, 
+address = {Zaragoza}, 
+year = {1990}, 
+abstract = {}, 
+keywords = {Spanish language; Adjective.}}
+
+
+
+@Book{PorrocheBallesteros1988,
+author = {Porroche Ballesteros, Margarita}, 
+title = {Ser, estar y verbos de cambio}, 
+volume = {Español para extranjeros}, 
+pages = {}, 
+editor = {}, 
+publisher = {Arco/Libros}, 
+address = {Madrid}, 
+year = {1988}, 
+abstract = {}, 
+keywords = {Spanish grammar; copula; copulative}}
+
+
 @Article{Lin2010Tenseless,
 author = {Lin, Jo-wang}, 
 title = {A Tenseless Analysis of Mandarin Chinese Revisited: A Response to Sybesma 2007}, 
@@ -151,7 +192,7 @@ keywords = {Copula; Copulative; Predication}}
 @Article{Arregi2020Specificational,
 author = {Arregi, Karlos and Francez, Itamar and Martinović, Martina}, 
 title = {Three arguments for an individual concept analysis of specificational sentences}, 
-journal = {Natural Language & Linguistic Theory}, 
+journal = {Natural Language \& Linguistic Theory}, 
 volume = {}, 
 number = {}, 
 pages = {}, 
