--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@Article{Hohaus2020Degrees,
+author = {Hohaus, Vera and Zimmermann, Malte}, 
+title = {Comparisons of Equality With German so\ldots wie, and the Relationship Between Degrees and Properties}, 
+journal = {Journal of Semantics}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {2020}, 
+location = {}, 
+keywords = {Degree; Properties; Adjective; Comparative; Copula}}
+
+
+
 @Book{Arche2019,
 author = {}, 
 title = {The grammar of copulas across languages}, 
@@ -22,7 +35,7 @@ publisher = {Libros Pórtico},
 address = {Zaragoza}, 
 year = {1990}, 
 abstract = {}, 
-keywords = {Spanish language; Adjective.}}
+keywords = {Spanish language; Adjective}}
 
 
 
