--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  hohaus2020degrees,
+  author	= {Hohaus, Vera and Zimmermann, Malte},
+  journal	= {Journal of Semantics},
+  title		= {Comparisons of Equality With German so{\ldots}wie, and the
+		  Relationship Between Degrees and Properties},
+  year		= {2020}
+}
+
 @Article{	  lin2006tense,
   author	= {Lin, Jo-Wang},
   journal	= {Journal of Semantics},
