--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,32 @@
+@Article{Bazaco2020Copula,
+author = {Bazaco, Carmelo}, 
+title = {Copulas in spanish: scalar structure and interpretive economy}, 
+journal = {Borealis: An International Journal of Hispanic Linguistics}, 
+volume = {9}, 
+number = {2}, 
+pages = {233–256}, 
+year = {2020}, 
+abstract = {}, 
+location = {}, 
+keywords = {Copula; Scales; Adjective; copular senteces}}
+
+
+
+
+@Article{Gumieletal2020Degree,
+author = {Gumiel-Molina, Silvia and Moreno-Quibén, Norberto and Pérez-Jiménez, Isabel}, 
+title = {On degree minimizers in Spanish}, 
+journal = {Borealis: An International Journal of Hispanic Linguistics}, 
+volume = {9}, 
+number = {1}, 
+pages = {69–86}, 
+year = {2020}, 
+location = {}, 
+keywords = {degree modiifier; minimizer; coercion; copular verb; copula; comparison class; granularity; gradable adjective}}
+
+
+
+
 @Article{Hohaus2020Degrees,
 author = {Hohaus, Vera and Zimmermann, Malte}, 
 title = {Comparisons of Equality With German so\ldots wie, and the Relationship Between Degrees and Properties}, 
