--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Book{		  rankin2020grammar,
+  address	= {New York},
+  author	= {Rankin, Tom and Whong, Melinda},
+  publisher	= {Cambridge University Press},
+  title		= {Grammar: a linguists' guide for language teachers},
+  year		= {2020}
+}
+
+@Book{		  moreno2020variedades,
+  address	= {London; New York},
+  author	= {Moreno Fern{\'a}́ndez, Francisco},
+  pages		= {xii, 169 pages},
+  publisher	= {Routledge},
+  title		= {Variedades de la lengua espa{\~n}ola},
+  year		= {2020}
+}
+
 @Article{	  hohaus2020degrees,
   author	= {Hohaus, Vera and Zimmermann, Malte},
   journal	= {Journal of Semantics},
