--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  spathas2020states,
+  author	= {Spathas, Giorgos and Michelioudakis, Dimitris},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {States in the decomposition of verbal predicates},
+  year		= {2020}
+}
+
 @Book{		  rankin2020grammar,
   address	= {New York},
   author	= {Rankin, Tom and Whong, Melinda},
