--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,70 @@
 
+@Article{	  pinelli2020clefts,
+  author	= {Pinelli, Maria Cristina and Poletto, Cecilia and Avesani,
+		  Cinzia},
+  journal	= {The Linguistic Review},
+  number	= {2},
+  pages		= {309--330},
+  title		= {Does prosody meet syntax? A case study on standard Italian
+		  cleft sentences and left peripheral focus},
+  volume	= {37},
+  year		= {2020}
+}
+
+@Article{	  ramaglia2020there,
+  author	= {Ramaglia, Francesca},
+  journal	= {The Linguistic Review},
+  number	= {2},
+  pages		= {269--307},
+  title		= {An interface analysis of marked copular constructions: The
+		  case of there-sentences},
+  volume	= {37},
+  year		= {2020}
+}
+
+@Article{	  paul2020existential,
+  author	= {Paul, Waltraud and Lu, Yaqiao and Lee, Thomas Hun-tak},
+  journal	= {The Linguistic Review},
+  number	= {2},
+  pages		= {231--267},
+  title		= {Existential and locative constructions in Mandarin
+		  Chinese},
+  volume	= {37},
+  year		= {2020}
+}
+
+@Article{	  kayne2020there,
+  author	= {Kayne, Richard S.},
+  journal	= {The Linguistic Review},
+  number	= {2},
+  pages		= {209--230},
+  title		= {Notes on Expletive There},
+  volume	= {37},
+  year		= {2020}
+}
+
+@Article{	  bassaganyas-bars2020,
+  author	= {Bassaganyas-Bars, Toni and McNally, Louise},
+  journal	= {The Linguistic Review},
+  number	= {2},
+  pages		= {179--208},
+  title		= {There be- and have-sentences: Different semantics,
+		  different definiteness effects},
+  volume	= {37},
+  year		= {2020}
+}
+
+@Article{	  ramaglia2020,
+  author	= {Ramaglia, Francesca and Frascarelli, Mara},
+  journal	= {The Linguistic Review},
+  number	= {2},
+  pages		= {173--177},
+  title		= {Copular constructions, existentials and related phenomena.
+		  An introduction},
+  volume	= {37},
+  year		= {2020}
+}
+
 @Article{	  spathas2020states,
   author	= {Spathas, Giorgos and Michelioudakis, Dimitris},
   journal	= {Natural Language \& Linguistic Theory},
@@ -7496,7 +7562,7 @@
   timestamp	= {2017-09-27T13:41:18Z}
 }
 
-@Book{		  gallego2015perspectivas-de,
+@Book{		  gallego2015perspectivas,
   address	= {Tres Cantos, Madrid},
   editor	= {Gallego, {\'A}ngel J.},
   publisher	= {{Akal}},
