--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  gillon2012implicit,
+  author	= {Gillon, Brendan S.},
+  journal	= {Linguistics and Philosophy},
+  number	= {4},
+  pages		= {313--359},
+  title		= {Implicit complements: a dilemma for model theoretic
+		  semantics},
+  volume	= {35},
+  year		= {2012}
+}
+
 @Article{	  pinelli2020clefts,
   author	= {Pinelli, Maria Cristina and Poletto, Cecilia and Avesani,
 		  Cinzia},
