--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,15 @@
+@Book{Garcia-Pardo2020Stative,
+author = {García-Pardo, Alfredo}, 
+title = {Stative Inquiries: Causes, results, experiences, and locations}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+publisher = {John Benjamins Publishing Company}, 
+address = {}, 
+year = {2020}, 
+keywords = {States; Psych verbs; Experiencer; Events; Copula; Locative}}
+
+
 @Article{Bazaco2020Copula,
 author = {Bazaco, Carmelo}, 
 title = {Copulas in spanish: scalar structure and interpretive economy}, 
