--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,30 @@
 
+@Book{		  garcia-pardo2020stative,
+  author	= {Garc{\'i}a-Pardo, Alfredo},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Stative Inquiries: Causes, results, experiences, and
+		  locations},
+  year		= {2020}
+}
+
+@Book{		  moreno2019dialectologia,
+  address	= {Madrid},
+  author	= {Moreno-Fern{\'a}ndez, Francisco},
+  pages		= {506},
+  publisher	= {Arco Libros},
+  title		= {La lengua espa{\~n}ola en su geograf{\'i}a},
+  year		= {2019}
+}
+
+@Book{		  moreno2016atlas,
+  address	= {Madrid},
+  author	= {Moreno-Fern{\'a}ndez, Francisco and Otero Roth, Jaime},
+  pages		= {117},
+  publisher	= {Fundaci{\'o}n Telef{\'o}nica},
+  title		= {Atlas de la lengua espa{\~n}ola en el mundo},
+  year		= {2016}
+}
+
 @Article{	  gillon2012implicit,
   author	= {Gillon, Brendan S.},
   journal	= {Linguistics and Philosophy},
