--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  degraff2005myth,
+  author	= {DeGraff, Michel},
+  journal	= {Language in Society},
+  number	= {4},
+  title		= {Linguists' most dangerous myth: The fallacy of Creole
+		  Exceptionalism},
+  volume	= {34},
+  year		= {2005}
+}
+
 @Book{		  garcia-pardo2020stative,
   author	= {Garc{\'i}a-Pardo, Alfredo},
   publisher	= {John Benjamins Publishing Company},
