--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  grimau2020plurality,
+  author	= {Grimau, Berta},
+  journal	= {Journal of Semantics},
+  title		= {Structured Plurality Reconsidered},
+  year		= {2020}
+}
+
 @Article{	  degraff2005myth,
   author	= {DeGraff, Michel},
   journal	= {Language in Society},
