--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  rauh2010syntactic,
+  author	= {Rauh, Gisa},
+  pages		= {436},
+  publisher	= {Oxford University Press},
+  title		= {Syntactic Categories},
+  year		= {2010}
+}
+
 @Article{	  grimau2020plurality,
   author	= {Grimau, Berta},
   journal	= {Journal of Semantics},
