--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Book{		  schwarzschild1996pluralities,
+  address	= {Dordrecht},
+  author	= {Schwarzschild, Roger},
+  publisher	= {Springer Netherlands},
+  title		= {Pluralities},
+  year		= {1996}
+}
+
+@InCollection{	  schein2009plurals,
+  author	= {Schein, Barry},
+  booktitle	= {The Oxford Handbook of Philosophy of Language},
+  editor	= {Lepore, Ernest and Smith, Barry C.},
+  publisher	= {Oxford University Press},
+  title		= {Plurals},
+  year		= {2009}
+}
+
 @Book{		  rauh2010syntactic,
   author	= {Rauh, Gisa},
   pages		= {436},
