--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,41 @@
 
+@Article{	  biezma2020nonassertion,
+  author	= {Biezma, Mar{\'i}a},
+  journal	= {Semantics and Pragmatics},
+  number	= {18},
+  title		= {Non-informative assertions: The case of non-optional
+		  wh-in-situ},
+  volume	= {13},
+  year		= {2020}
+}
+
+@InBook{	  pintzuk2003variation,
+  author	= {Pintzuk, Susan},
+  booktitle	= {The Handbook of Historical Linguistics},
+  editor	= {Joseph, Brian and Janda, Richard},
+  pages		= {509-528},
+  publisher	= {Wiley-Blackwell},
+  title		= {Variationist Approaches to Syntactic Change},
+  year		= {2003}
+}
+
+@Book{		  joseph2003historical,
+  editor	= {Joseph, Brian and Janda, Richard},
+  pages		= {904},
+  publisher	= {Wiley-Blackwell},
+  title		= {The Handbook of Historical Linguistics},
+  year		= {2003}
+}
+
+@Article{	  longobardi2005reference,
+  author	= {Longobardi, Giuseppe},
+  journal	= {Zeitschrift f{\"u}r Sprachwissenschaft},
+  number	= {1},
+  title		= {Toward a Unified Grammar of Reference},
+  volume	= {24},
+  year		= {2005}
+}
+
 @Book{		  schwarzschild1996pluralities,
   address	= {Dordrecht},
   author	= {Schwarzschild, Roger},
