--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,65 @@
 
+@Article{	  bruening2020implicit,
+  author	= {Bruening, Benjamin},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {Implicit arguments in English double object
+		  constructions},
+  year		= {2020}
+}
+
+@InBook{	  partee1988possible,
+  address	= {Berlin, New York},
+  author	= {Partee, Barbara H.},
+  booktitle	= {Possible Worlds in Humanities, Arts and Sciences},
+  editor	= {Sture, All{\'e}n},
+  publisher	= {DE GRUYTER},
+  title		= {Possible Worlds in Model-Theoretic Semantics: A Linguistic
+		  Perspective},
+  year		= {1988}
+}
+
+@InBook{	  partee1995compositionality,
+  address	= {Cambridge, Mass.},
+  author	= {Partee, Barbara H.},
+  booktitle	= {An invitation to cognitive science. Part I: Language},
+  editor	= {Osherson, Daniel N. and Gleitman, Lila R.},
+  publisher	= {MIT Press},
+  title		= {Lexical Semantics and Compositionality},
+  year		= {1995}
+}
+
+@InBook{	  nouwen2016plurality,
+  address	= {Cambridge},
+  author	= {Nouwen, Rick},
+  booktitle	= {The Cambridge Handbook of Formal Semantics},
+  editor	= {Aloni, Maria and Dekker, Paul},
+  pages		= {267-284},
+  publisher	= {Cambridge University Press},
+  title		= {Plurality},
+  year		= {2016}
+}
+
+@Article{	  gillon1987plurals,
+  author	= {Gillon, Brendan S.},
+  journal	= {Linguistics and Philosophy},
+  number	= {2},
+  pages		= {199--219},
+  title		= {The readings of plural noun phrases in English},
+  volume	= {10},
+  year		= {1987}
+}
+
+@Article{	  gillon1990reply,
+  author	= {Gillon, Brendan S.},
+  journal	= {Linguistics and Philosophy},
+  number	= {4},
+  pages		= {477--485},
+  title		= {Plural noun phrases and their readings: A reply to
+		  Lasersohn},
+  volume	= {13},
+  year		= {1990}
+}
+
 @Article{	  biezma2020nonassertion,
   author	= {Biezma, Mar{\'i}a},
   journal	= {Semantics and Pragmatics},
@@ -871,7 +932,7 @@
 
 @InBook{	  partee1974opacity,
   address	= {New York},
-  author	= {Partee, Barbara H},
+  author	= {Partee, Barbara H.},
   booktitle	= {Semantics and Philosophy},
   editor	= {Munitz, M. and Unger, P.},
   pages		= {81-101},
@@ -4250,7 +4311,7 @@
 }
 
 @InCollection{	  partee2008ambiguous-pseud,
-  author	= {Partee, Barbara H},
+  author	= {Partee, Barbara H.},
   booktitle	= {Compositionality in {Formal} {Semantics}},
   pages		= {190--202},
   publisher	= {John Wiley \& Sons},
@@ -4260,7 +4321,7 @@
 }
 
 @InCollection{	  partee1998copula-inversio,
-  author	= {Partee, Barbara H},
+  author	= {Partee, Barbara H.},
   booktitle	= {{UMOP} 23: {Issues} in {Semantics} and its {Interface}},
   editor	= {Kusumoto, Kiyomi and Villalta, Elisabeth},
   pages		= {198--208},
@@ -4269,7 +4330,7 @@
 }
 
 @Article{	  partee2010specificational,
-  author	= {Partee, Barbara H},
+  author	= {Partee, Barbara H.},
   journal	= {Oslo Studies in Language},
   number	= {1},
   title		= {Specificational {Copular} {Sentences} in {Russian} and
@@ -17594,7 +17655,7 @@
 }
 
 @Article{	  partee1975montague-grammar-and,
-  author	= {Partee, Barbara},
+  author	= {Partee, Barbara H.},
   journal	= {Linguistic Inquiry},
   number	= {2},
   pages		= {203--300},
@@ -17605,7 +17666,7 @@
 }
 
 @Article{	  partee1973some-transformationa,
-  author	= {Partee, Barbara},
+  author	= {Partee, Barbara H.},
   journal	= {Journal of Philosophical Logic},
   number	= {4},
   pages		= {509--534},
@@ -17638,7 +17699,7 @@
 }
 
 @Article{	  partee1970negation-conjunction,
-  author	= {Partee, Barbara Hall},
+  author	= {Partee, Barbara H.},
   journal	= {Foundations of Language},
   number	= {2},
   pages		= {153--165},
@@ -17650,7 +17711,7 @@
 }
 
 @Article{	  partee1970opacity-coreference-,
-  author	= {Partee, Barbara Hall},
+  author	= {Partee, Barbara H.},
   journal	= {Synthese},
   number	= {3/4},
   pages		= {359--385},
@@ -17661,7 +17722,7 @@
 }
 
 @Article{	  partee1973some-structural-anal,
-  author	= {Partee, Barbara Hall},
+  author	= {Partee, Barbara H.},
   journal	= {The Journal of Philosophy},
   number	= {18},
   pages		= {601--609},
@@ -24751,7 +24812,7 @@
 }
 
 @Article{	  partee2012sortal-relational-an,
-  author	= {Partee, B. H. and Borschev, V.},
+  author	= {Partee, Barbara H. and Borschev, V.},
   journal	= {Journal of Semantics},
   number	= {4},
   pages		= {445--486},
